TextNumberParser.Parser/Generated/TextNumbersParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from c:\Users\gg\source\repos\TextNumberParser\TextNumberParser.Parser\TextNumbers.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class TextNumbersParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		CHAR=1, DIGIT=2, BETWEEN_10_AND_19=3, TENS=4, TENS_HYPHEN_DIGIT=5, HUNDRED=6, 
		THOUSAND=7, MILLION=8, BILLION=9, NOUGHT=10, POINT=11, FRACTIONAL=12, 
		WHITESPACE=13, NEWLINE=14, ANY=15;
	public const int
		RULE_content = 0, RULE_number = 1, RULE_digit = 2, RULE_tens = 3, RULE_tensHyphenDigit = 4, 
		RULE_hundreds = 5, RULE_thousands = 6, RULE_millions = 7, RULE_billions = 8, 
		RULE_fractional = 9, RULE_digitInWord = 10, RULE_tensInWord = 11, RULE_hundredsInWord = 12, 
		RULE_thousandsInWord = 13, RULE_millionsInWord = 14, RULE_billionsInWord = 15, 
		RULE_notNumber = 16, RULE_newLine = 17;
	public static readonly string[] ruleNames = {
		"content", "number", "digit", "tens", "tensHyphenDigit", "hundreds", "thousands", 
		"millions", "billions", "fractional", "digitInWord", "tensInWord", "hundredsInWord", 
		"thousandsInWord", "millionsInWord", "billionsInWord", "notNumber", "newLine"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, "' '"
	};
	private static readonly string[] _SymbolicNames = {
		null, "CHAR", "DIGIT", "BETWEEN_10_AND_19", "TENS", "TENS_HYPHEN_DIGIT", 
		"HUNDRED", "THOUSAND", "MILLION", "BILLION", "NOUGHT", "POINT", "FRACTIONAL", 
		"WHITESPACE", "NEWLINE", "ANY"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TextNumbers.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static TextNumbersParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TextNumbersParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TextNumbersParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ContentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext[] number() {
			return GetRuleContexts<NumberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberContext number(int i) {
			return GetRuleContext<NumberContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NotNumberContext[] notNumber() {
			return GetRuleContexts<NotNumberContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NotNumberContext notNumber(int i) {
			return GetRuleContext<NotNumberContext>(i);
		}
		public ContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_content; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContentContext content() {
		ContentContext _localctx = new ContentContext(Context, State);
		EnterRule(_localctx, 0, RULE_content);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 40;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CHAR) | (1L << DIGIT) | (1L << BETWEEN_10_AND_19) | (1L << TENS) | (1L << TENS_HYPHEN_DIGIT) | (1L << HUNDRED) | (1L << THOUSAND) | (1L << MILLION) | (1L << BILLION) | (1L << NOUGHT) | (1L << POINT) | (1L << FRACTIONAL) | (1L << WHITESPACE) | (1L << NEWLINE) | (1L << ANY))) != 0)) {
				{
				State = 38;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 36;
					number();
					}
					break;
				case 2:
					{
					State = 37;
					notNumber();
					}
					break;
				}
				}
				State = 42;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NumberContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public BillionsContext[] billions() {
			return GetRuleContexts<BillionsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BillionsContext billions(int i) {
			return GetRuleContext<BillionsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MillionsContext[] millions() {
			return GetRuleContexts<MillionsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MillionsContext millions(int i) {
			return GetRuleContext<MillionsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ThousandsContext[] thousands() {
			return GetRuleContexts<ThousandsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ThousandsContext thousands(int i) {
			return GetRuleContext<ThousandsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public HundredsContext[] hundreds() {
			return GetRuleContexts<HundredsContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public HundredsContext hundreds(int i) {
			return GetRuleContext<HundredsContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TensHyphenDigitContext[] tensHyphenDigit() {
			return GetRuleContexts<TensHyphenDigitContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TensHyphenDigitContext tensHyphenDigit(int i) {
			return GetRuleContext<TensHyphenDigitContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TensContext[] tens() {
			return GetRuleContexts<TensContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TensContext tens(int i) {
			return GetRuleContext<TensContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DigitContext[] digit() {
			return GetRuleContexts<DigitContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DigitContext digit(int i) {
			return GetRuleContext<DigitContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FractionalContext[] fractional() {
			return GetRuleContexts<FractionalContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FractionalContext fractional(int i) {
			return GetRuleContext<FractionalContext>(i);
		}
		public NumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NumberContext number() {
		NumberContext _localctx = new NumberContext(Context, State);
		EnterRule(_localctx, 2, RULE_number);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 51;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					State = 51;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
					case 1:
						{
						State = 43;
						billions();
						}
						break;
					case 2:
						{
						State = 44;
						millions();
						}
						break;
					case 3:
						{
						State = 45;
						thousands();
						}
						break;
					case 4:
						{
						State = 46;
						hundreds();
						}
						break;
					case 5:
						{
						State = 47;
						tensHyphenDigit();
						}
						break;
					case 6:
						{
						State = 48;
						tens();
						}
						break;
					case 7:
						{
						State = 49;
						digit();
						}
						break;
					case 8:
						{
						State = 50;
						fractional();
						}
						break;
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 53;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DigitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGIT() { return GetToken(TextNumbersParser.DIGIT, 0); }
		public DigitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_digit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDigit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DigitContext digit() {
		DigitContext _localctx = new DigitContext(Context, State);
		EnterRule(_localctx, 4, RULE_digit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 55;
			Match(DIGIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TensContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TENS() { return GetToken(TextNumbersParser.TENS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WHITESPACE() { return GetTokens(TextNumbersParser.WHITESPACE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITESPACE(int i) {
			return GetToken(TextNumbersParser.WHITESPACE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BETWEEN_10_AND_19() { return GetToken(TextNumbersParser.BETWEEN_10_AND_19, 0); }
		public TensContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tens; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTens(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TensContext tens() {
		TensContext _localctx = new TensContext(Context, State);
		EnterRule(_localctx, 6, RULE_tens);
		int _la;
		try {
			State = 65;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TENS:
			case WHITESPACE:
				EnterOuterAlt(_localctx, 1);
				{
				State = 58;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==WHITESPACE) {
					{
					State = 57;
					Match(WHITESPACE);
					}
				}

				{
				State = 60;
				Match(TENS);
				State = 62;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
				case 1:
					{
					State = 61;
					Match(WHITESPACE);
					}
					break;
				}
				}
				}
				break;
			case BETWEEN_10_AND_19:
				EnterOuterAlt(_localctx, 2);
				{
				State = 64;
				Match(BETWEEN_10_AND_19);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TensHyphenDigitContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TENS_HYPHEN_DIGIT() { return GetToken(TextNumbersParser.TENS_HYPHEN_DIGIT, 0); }
		public TensHyphenDigitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_tensHyphenDigit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTensHyphenDigit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TensHyphenDigitContext tensHyphenDigit() {
		TensHyphenDigitContext _localctx = new TensHyphenDigitContext(Context, State);
		EnterRule(_localctx, 8, RULE_tensHyphenDigit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 67;
			Match(TENS_HYPHEN_DIGIT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HundredsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WHITESPACE() { return GetTokens(TextNumbersParser.WHITESPACE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITESPACE(int i) {
			return GetToken(TextNumbersParser.WHITESPACE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] HUNDRED() { return GetTokens(TextNumbersParser.HUNDRED); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode HUNDRED(int i) {
			return GetToken(TextNumbersParser.HUNDRED, i);
		}
		public HundredsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_hundreds; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitHundreds(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public HundredsContext hundreds() {
		HundredsContext _localctx = new HundredsContext(Context, State);
		EnterRule(_localctx, 10, RULE_hundreds);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 70;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHITESPACE) {
				{
				State = 69;
				Match(WHITESPACE);
				}
			}

			State = 73;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 72;
					Match(HUNDRED);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 75;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 78;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				{
				State = 77;
				Match(WHITESPACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ThousandsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WHITESPACE() { return GetTokens(TextNumbersParser.WHITESPACE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITESPACE(int i) {
			return GetToken(TextNumbersParser.WHITESPACE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] THOUSAND() { return GetTokens(TextNumbersParser.THOUSAND); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode THOUSAND(int i) {
			return GetToken(TextNumbersParser.THOUSAND, i);
		}
		public ThousandsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_thousands; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitThousands(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ThousandsContext thousands() {
		ThousandsContext _localctx = new ThousandsContext(Context, State);
		EnterRule(_localctx, 12, RULE_thousands);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 81;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHITESPACE) {
				{
				State = 80;
				Match(WHITESPACE);
				}
			}

			State = 84;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 83;
					Match(THOUSAND);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 86;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,11,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 89;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				{
				State = 88;
				Match(WHITESPACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MillionsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WHITESPACE() { return GetTokens(TextNumbersParser.WHITESPACE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITESPACE(int i) {
			return GetToken(TextNumbersParser.WHITESPACE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] MILLION() { return GetTokens(TextNumbersParser.MILLION); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MILLION(int i) {
			return GetToken(TextNumbersParser.MILLION, i);
		}
		public MillionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_millions; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMillions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MillionsContext millions() {
		MillionsContext _localctx = new MillionsContext(Context, State);
		EnterRule(_localctx, 14, RULE_millions);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 92;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHITESPACE) {
				{
				State = 91;
				Match(WHITESPACE);
				}
			}

			State = 95;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 94;
					Match(MILLION);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 97;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,14,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 100;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,15,Context) ) {
			case 1:
				{
				State = 99;
				Match(WHITESPACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BillionsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WHITESPACE() { return GetTokens(TextNumbersParser.WHITESPACE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITESPACE(int i) {
			return GetToken(TextNumbersParser.WHITESPACE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] BILLION() { return GetTokens(TextNumbersParser.BILLION); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BILLION(int i) {
			return GetToken(TextNumbersParser.BILLION, i);
		}
		public BillionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_billions; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBillions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BillionsContext billions() {
		BillionsContext _localctx = new BillionsContext(Context, State);
		EnterRule(_localctx, 16, RULE_billions);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 103;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHITESPACE) {
				{
				State = 102;
				Match(WHITESPACE);
				}
			}

			State = 106;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 105;
					Match(BILLION);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 108;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,17,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 111;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,18,Context) ) {
			case 1:
				{
				State = 110;
				Match(WHITESPACE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FractionalContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode FRACTIONAL() { return GetToken(TextNumbersParser.FRACTIONAL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WHITESPACE() { return GetToken(TextNumbersParser.WHITESPACE, 0); }
		public FractionalContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fractional; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFractional(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FractionalContext fractional() {
		FractionalContext _localctx = new FractionalContext(Context, State);
		EnterRule(_localctx, 18, RULE_fractional);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==WHITESPACE) {
				{
				State = 113;
				Match(WHITESPACE);
				}
			}

			State = 116;
			Match(FRACTIONAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DigitInWordContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CHAR() { return GetToken(TextNumbersParser.CHAR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIGIT() { return GetToken(TextNumbersParser.DIGIT, 0); }
		public DigitInWordContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_digitInWord; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITextNumbersVisitor<TResult> typedVisitor = visitor as ITextNumbersVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDigitInWord(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DigitInWordContext digitInWord() {
		DigitInWordContext _localctx = new DigitInWordContext(Context, State);
		EnterRule(_localctx, 20, RULE_digitInWord);
		try {
			State = 122;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case CHAR:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 118;
				Match(CHAR);
				State = 119;
				Match(DIGIT);
				}
				}
				break;
			case DIGIT:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 120;
				Match(DIGIT);
				State = 121;
				Match(CHAR);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
